# AsynLogSystem-CloudStorage

./: .gitignore  CMakeLists.txt
src/client/: main.cpp
src/common/: async_logger.cpp  async_logger.h  log_sink.cpp  log_sink.h  thread_pool.cpp  thread_pool.h
src/server/: main.cpp
src/storage/: cloud_storage.cpp  cloud_storage.h  metadata_store.cpp  metadata_store.h
